# musl

./: CMakeLists.txt
arch/generic/bits/: stat.h
arch/riscv64/: syscall_arch.h
include/sys/: stat.h
